--- a/content/posts/2023-08-21-check-in.md
+++ b/content/posts/2023-08-21-check-in.md
@@ -1,6 +1,11 @@
 ---
 title: "2023-08-21 Check-in"
 date: 2023-08-21T18:15:02-04:00
+categories:
+- health
+tags:
+- health 
+- check-in
 ---
 
 # 2023-08-21 Check-in
