changing post titles to h2

--- a/content/posts/2023-08-21-check-in.md
+++ b/content/posts/2023-08-21-check-in.md
@@ -4,11 +4,11 @@ date: 2023-08-21T18:15:02-04:00
 categories:
 - health
 tags:
-- health 
+- health
 - check-in
 ---
 
-# 2023-08-21 Check-in
+## 2023-08-21 Check-in
 
 Original [OKRs post](/posts/okr-grids-for-health/) I'm tracking against.
 
@@ -77,7 +77,7 @@ Original [OKRs post](/posts/okr-grids-for-health/) I'm tracking against.
 
 ### Priorities
 
-This past week was difficult with back to back travel weekends, so I did not capture priorities for this past week.  Boo!  
+This past week was difficult with back to back travel weekends, so I did not capture priorities for this past week.  Boo!
 
 I can at least share some accomplishments.
 
